tree-sitter-org-inline/test/corpus/phase3_contexts.txt
================================================================================
LaTeX in NORMAL context
================================================================================
Text with $\alpha$ inline
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (plain_text)
      (latex_fragment)
      (plain_text))))

================================================================================
Superscript in NORMAL context
================================================================================
x^2 equation
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (superscript)
      (plain_text))))

================================================================================
Subscript in NORMAL context
================================================================================
H_2O water
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (subscript)
      (plain_text))))

================================================================================
Superscript in LINK_DESCRIPTION context
================================================================================
[[url][x^2 equation]]
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (regular_link
        (superscript)
        (plain_text)))))

================================================================================
Subscript in LINK_DESCRIPTION context
================================================================================
[[url][H_2O water]]
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (regular_link
        (subscript)
        (plain_text)))))

================================================================================
LaTeX in LINK_DESCRIPTION context
================================================================================
[[url][$\alpha$ math]]
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (regular_link
        (latex_fragment)
        (plain_text)))))

================================================================================
LaTeX NOT parsed in bold (becomes plain text)
================================================================================
*bold $x$*
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (bold
        (plain_text)
        (ERROR)))))

================================================================================
Superscript NOT parsed in italic
================================================================================
/italic x^2/
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (italic
        (plain_text)))))

================================================================================
Subscript NOT parsed in underline
================================================================================
_underline H_2O_
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (underline
        (plain_text)))))
