tree-sitter-org-inline/test/corpus/plain_links.txt
==================
Simple HTTP plain link
==================

http://example.com

---

(inline
  (title_only
    (title
      (plain_link))))

==================
Simple HTTPS plain link
==================

https://example.com

---

(inline
  (title_only
    (title
      (plain_link))))

==================
FTP plain link
==================

ftp://ftp.example.com/file.txt

---

(inline
  (title_only
    (title
      (plain_link))))

==================
Plain link with path
==================

https://example.com/path/to/page

---

(inline
  (title_only
    (title
      (plain_link))))

==================
Plain link ending with slash
==================

https://example.com/path/

---

(inline
  (title_only
    (title
      (plain_link))))

==================
Plain link with query string
==================

https://example.com/search?q=test&lang=en

---

(inline
  (title_only
    (title
      (plain_link))))

==================
Plain link with fragment
==================

https://example.com/page#section

---

(inline
  (title_only
    (title
      (plain_link))))

==================
Plain link with trailing hyphen
==================

https://example.com/test-path-

---

(inline
  (title_only
    (title
      (plain_link))))

==================
mailto plain link
==================

mailto:user@example.com

---

(inline
  (title_only
    (title
      (plain_link))))
