tree-sitter-org-inline/test/corpus/radio_targets.txt
================================================================================
Simple radio target
================================================================================
<<<target>>>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target))))

================================================================================
Radio target with multiple words
================================================================================
<<<important information>>>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target))))

================================================================================
Radio target with text markup
================================================================================
<<<*important* information>>>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target))))

================================================================================
Radio target with plain text
================================================================================
This is <<<a radio target>>> in text.
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (plain_text)
      (radio_target)
      (plain_text))))

================================================================================
Multiple radio targets
================================================================================
<<<first>>> and <<<second>>>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target)
      (plain_text)
      (radio_target))))

================================================================================
Radio target with hyphens and underscores
================================================================================
<<<my-important_target>>>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target))))

================================================================================
Radio target vs regular target (different markers)
================================================================================
<<<radio>>> and <<regular>>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target)
      (plain_text)
      (target))))

================================================================================
Radio target vs angle link (different markers)
================================================================================
<<<radio>>> and <http://example.com>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target)
      (plain_text)
      (angle_link))))

================================================================================
Radio target with numbers
================================================================================
<<<version 2.0>>>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target))))

================================================================================
Radio target with special characters
================================================================================
<<<hello-world_test 123>>>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target))))

================================================================================
Radio target at start of title
================================================================================
<<<Start>>> of title
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (radio_target)
      (plain_text))))

================================================================================
Radio target at end of title
================================================================================
End of <<<title>>>
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (plain_text)
      (radio_target))))
